Fixed letter spacing on logo.

--- a/src/layout/styles/main.styl
+++ b/src/layout/styles/main.styl
@@ -94,7 +94,7 @@ body
   padding-left 0.14em
 
   font-weight bold
-  letter-spacing -0.25em
+  letter-spacing -0.24em
 
   color #FCFCFC
   speak none
